--- a/index.html
+++ b/index.html
@@ -15,10 +15,31 @@
     </head>
     <body>
         <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p><![endif]-->
 		<!-- Starting application content here -->
-
+        <header>
+            <div class="container-fluid logo_menu_area">
+                <div class="container ">
+                    <div class="logo_area col-md-4">
+                        <h2>blu<span class="e_logo">e</span>asy</h2>
+                    </div>
+                    <div class="menu_area col-md-8">
+                        <nav>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a class="active" href="#">home</a></li>
+                                <li><a href="#">services</a></li>
+                                <li><a href="#">features</a></li>
+                                <li><a href="#">portfolio</a></li>
+                                <li><a href="#">contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="slide_area col-md-12">
+                        <h2>“I’m looking for the unexpected.</h2><h2> I’m looking for things I’ve never seen before.”</h2>
+                    </div>
+                </div>
+            </div>
+        </header>
 		<!-- End application content here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -26,7 +47,6 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
