--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
                 </div>
             </div>
         </header>
+        <section>
+            <div class="container-fluid service_area">
+                <div class="container service">
+                    <h2><span class="ser">ser</span>vice</h2>
+                    <div class="service_one col-md-3">
+                        <a href="#"><img src="img/service/service-one.png" alt=""></a>
+                        <h3>Coffee</h3>
+                        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+                    </div>
+                    <div class="service_one col-md-3">
+                        <a href="#"><img src="img/service/service-two.png" alt=""></a>
+                        <h3>Instant</h3>
+                        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+                    </div>
+                    <div class="service_one col-md-3">
+                        <a href="#"><img src="img/service/service-three.png" alt=""></a>
+                        <h3>Serious</h3>
+                        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+                    </div>
+                    <div class="service_one col-md-3">
+                        <a href="#"><img src="img/service/service-four.png" alt=""></a>
+                        <h3>Frame</h3>
+                        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 		<!-- End application content here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
