--- a/index.html
+++ b/index.html
@@ -109,6 +109,20 @@
                 </div>
             </div>
         </section>
+        <section class="content-fluid video_info">
+            <div class="container video_info_full">
+                <div class="video_content col-md-5">
+                    <h2>Just Default Section</h2>
+                    <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+                    <br><br>
+                    Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+                    <button class="video_button btn btn-primary">Visit Me</button>
+                </div>
+                <div class="video_section col-md-6">
+                    <iframe class="youtube" src="https://www.youtube.com/embed/60ItHLz5WEA?"></iframe>
+                </div>
+            </div>
+        </section>
 		<!-- End application content here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
