--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
                 </div>
             </div>
         </section>
+        <section class="container-fluid twitter_area">
+            <div class="container">
+                <div class="twitter_tittle col-md-11">
+                    <h2>Twitter</h2>
+                </div>
+                <div class="twitter_icon col-md-1">
+                    <i class="fa fa-twitter"></i>
+                </div>
+                <div class="twitter_content twitter_tittle col-md-11">
+                    <h4>Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake<br><strong> @ cheesecake</strong> tootsie roll.</h4>
+                </div>
+            </div>
+        </section>
 		<!-- End application content here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
