--- a/index.html
+++ b/index.html
@@ -136,6 +136,26 @@
                 </div>
             </div>
         </section>
+        <section class="about container-fluid">
+            <div class="container">
+                <div class="left_area col-md-6">
+                    <h2>Who is john doe?</h2>
+                    <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+                    <br><br>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+                </div>
+                <div class="right_area col-md-6">
+                    <div class="right_side_content">
+                        <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+                    </div>
+                    <div class="rignt_side_icon">
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-youtube icon_one"></i></a>
+                        <a href="#"><i class="fa fa-google icon_one"></i></a>
+                        <a href="#"><i class="fa fa-skype icon_one"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
 		<!-- End application content here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
